style.css
/* ... */
.hero-avatar {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
  margin-bottom: 1rem;
  position: relative;
  z-index: 2;
  transition: border var(--default-transition),
    outline var(--default-transition);
}

.hero-avatar-image {
  width: 3.5rem;
  height: 3.5rem;
  border-radius: var(--rounded-50);
}

.hero-avatar div {
  position: relative;
  font-size: 0.875rem;
  font-weight: 600;
  padding: 0.5rem 0.75rem 0.5rem 1.625rem;
  background-color: var(--primary);
  border-radius: var(--rounded-full);
  transition: background-color var(--default-transition);
}

.hero-avatar.dark div {
  background-color: var(--primary-dark);
}

.hero-avatar div::before {
  content: "";
  display: block;
  width: 0.625rem;
  height: 0.625rem;
  background-color: var(--purple);
  border-radius: var(--rounded-50);
  position: absolute;
  top: 50%;
  left: 0%;
  z-index: 1;
  transform: translate(0.625rem, -50%);
  transition: background-color var(--default-transition);
}

.hero-avatar.dark div::before {
  background-color: var(--purple);
}

.hero-text {
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  cursor: default;
  position: relative;
  z-index: 2;
}

.hero-title {
  width: 100%;
  font-family: "Outfit", sans-serif;
  max-width: 17ch;
  margin-bottom: 2rem;
}

.hero-tags {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 0.5rem;
  margin-bottom: 1.5rem;
  cursor: default;
}

.hero-tags > span {
  font-size: 0.875rem;
  font-weight: 600;
  padding: 0.5rem 0.75rem;
  border-radius: var(--rounded-xsm);
  transition: background-color var(--default-transition);
}

.hero-tags > span:first-of-type {
  background-color: var(--light-blue);
}

.hero-tags > span:nth-of-type(2) {
  background-color: var(--light-purple);
}

.hero-tags > span:nth-of-type(3) {
  background-color: var(--light-green);
}

.hero-tags.dark > span:first-of-type {
  background-color: var(--blue);
}

.hero-tags.dark > span:nth-of-type(2) {
  background-color: var(--magenta);
}

.hero-tags.dark > span:nth-of-type(3) {
  background-color: var(--green);
}

.hero-subtitle {
  max-width: 52ch;
  font-size: clamp(
    1rem,
    0.8935643564356436rem + 0.39603960396039606vw,
    1.25rem
  );
  font-weight: 400;
  line-height: 1.3;
  text-wrap: pretty;
  margin-bottom: 1.5rem;
}

.hero-subtitle > span {
  font-weight: 600;
}

.hero-button-div {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}

.hero-button {
  padding: 14px 24px;
}

.hero-button span:nth-of-type(2) svg {
  transform: rotate(45deg);
}

.about-section {
  position: relative;
}

.about-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;
}

.about-headline {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: clamp(1rem, 0.5742574257425743rem + 1.5841584158415842vw, 2rem);
}

.about-headline div {
  width: 100%;
  border-bottom: 2px solid var(--primary);
  margin-top: 6px;
  transition: border var(--default-transition);
}

.about-section.dark .about-headline div {
  border-bottom: 2px solid var(--primary-dark);
}

.about-headline > svg {
  flex-shrink: 0;
  width: clamp(2.5rem, 1.5909090909090908rem + 4.545454545454546vw, 5rem);
  height: clamp(2.5rem, 1.5909090909090908rem + 4.545454545454546vw, 5rem);
  transform: rotate(180deg);
}

.about-container-content {
  display: flex;
  gap: clamp(2rem, -0.2921013412816693rem + 4.769001490312966vw, 4rem);
  margin-bottom: 100px;
}

.about-image-wrapper {
  flex: 1;
}

.author-photo {
  aspect-ratio: 1 / 1;
  max-height: 390px;
  object-fit: cover;
  object-position: bottom;
  width: 100%;
  border-radius: var(--rounded-md);
  transition: filter var(--default-transition);
}

.author-photo.dark {
  filter: contrast(96%) brightness(104%);
}

.about-description-wrapper {
  display: flex;
  flex-direction: column;
  flex: 2;
  height: 100%;
}

.about-description-title {
  text-transform: uppercase;
  font-weight: 600;
  margin-bottom: 1rem;
}

.about-description-wrapper p:nth-of-type(2) {
  margin-bottom: 1rem;
}

.services-container {
  display: flex;
  flex-direction: column;
}

.services-content-wrapper {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.services-card-wrapper {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: 1fr;
  gap: 1rem;
}

.services-card {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  background-color: var(--background);
  padding: clamp(1.25rem, 0.5172413793103449rem + 2.7586206896551726vw, 3rem);
  border: 2px solid var(--primary);
  border-radius: var(--rounded-md);
  transition: background-color var(--default-transition),
    border var(--default-transition);
  position: sticky;
  top: 6rem;
}

.services-card.dark {
  background-color: var(--background-dark);
  border: 2px solid var(--primary-dark);
}

.services-header {
  width: 100%;
  display: flex;
  align-items: center;
  gap: 1rem;
  text-wrap: nowrap;
  margin: 0;
  font-weight: 600;
}

.services-header-icon {
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0.5rem;
  border-radius: var(--rounded-xsm);
  transition: background-color var(--default-transition);
}

.services-card:nth-of-type(1) > .services-header > .services-header-icon {
  background-color: var(--light-blue);
}

.services-card:nth-of-type(2) > .services-header > .services-header-icon {
  background-color: var(--light-purple);
}

.services-card:nth-of-type(3) > .services-header > .services-header-icon {
  background-color: var(--light-green);
}

.services-card:nth-of-type(4) > .services-header > .services-header-icon {
  background-color: var(--primary);
}

.services-card:nth-of-type(1) > .services-header > .services-header-icon.dark {
  background-color: var(--blue);
}

.services-card:nth-of-type(2) > .services-header > .services-header-icon.dark {
  background-color: var(--magenta);
}
/* ... */

